# DynamicLightRange

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DynamicLightRange.sln  DynamicLightRange.vcxproj  DynamicLightRange.vcxproj.filters  DynamicLightRange.vstemplate  Headers.h  Plugin.cpp  README.md  Sources.h  resource.aps  resource.rc
.github/workflows/: release.yml
ZENGIN/GOTHIC_II_CLASSIC/API/: zString.h
ZENGIN/GOTHIC_USERAPI/: zCVobLight.inl  zCVobLightData.inl
dependencies/union/: CMakeLists.txt
dependencies/union/gothic-userapi/: CGameManager.inl  TMobOptPos.inl  TNpcAIState.inl  TNpcPerc.inl  TNpcSlot.inl  oCAIArrow.inl  oCAIArrowBase.inl  oCAICamera.inl  oCAIDrop.inl  oCAIHuman.inl  oCAIHuman_Stand.inl  oCAISound.inl  oCAIVobMove.inl  oCAIVobMoveTorch.inl  oCAniCtrl_Human.inl  oCAniCtrl_Human_oTComboInfo.inl  oCAskBox.inl  oCBarrier.inl  oCBinkPlayer.inl  oCCSManager.inl  oCCSPlayer.inl  oCCSProps.inl  oCCSTrigger.inl  oCCollObjectCharacter.inl  oCDoc.inl  oCDocumentManager.inl  oCDummyVobGenerator.inl  oCEmitterKey.inl  oCGame.inl  oCGameInfo.inl  oCGame_TObjectRoutine.inl  oCGuilds.inl  oCHelp.inl  oCHelpScreen.inl  oCInfo.inl  oCInfoChoice.inl  oCInfoManager.inl  oCInfo_Tpd.inl  oCInformationManager.inl  oCItem.inl  (+584 more)
src/: DynamicLightRange.hpp  Game.hpp  Plugin.cpp  Plugin.hpp  Plugin_G1.hpp  Plugin_G1A.hpp  Plugin_G2.hpp  Plugin_G2A.hpp  Sources.hpp  dllmain.cpp
